# accountability-gadget-prototype

./: Cargo.toml  README.md
benchmark/: fabfile.py  install-root.sh  install-ubuntu.sh  plot-ledgers.py  plot-traffic.py  settings.json
benchmark/aws/: instance.py  remote.py  settings.py
benchmark/benchmark/: commands.py  config.py  local.py  mycommands.py  mylocal.py  myutils.py
consensus/: Cargo.toml
consensus/src/: aggregator.rs  consensus.rs  core.rs  leader.rs  lib.rs  messages.rs  synchronizer.rs  timer.rs
crypto/: Cargo.toml
crypto/src/: lib-bls.rs  lib.rs
gossip/: Cargo.toml
gossip/src/: config.rs  lib.rs
mempool/: Cargo.toml
mempool/src/: core.rs  mempool.rs  messages.rs  payload.rs
mynode/: Cargo.toml
mynode/src/: config.rs  cpactions.rs  cpevents.rs  cpextractor.rs  cpleader.rs  cpproposer.rs  error.rs  lcblocks.rs  lcblocktreemanager.rs  main.rs  miner.rs  myadversarialnode.rs  myclient.rs  mynode.rs  mytest.rs
node/: Cargo.toml
