[package]
name = "mynode"
version = "0.1.0"
authors = ["Joachim Neu <jneu@stanford.edu>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.1.0", features = ["time", "macros", "net", "rt-multi-thread"] }
tokio-util = { version = "0.6.2", features = ["codec"] }
log = "0.4.0"
bytes = "1.0.1"
bincode = "1.3.1"
futures = "0.3.8"
clap = "2.33.3"
env_logger = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
rand = "0.7.3"
thiserror = "1.0.21"
anyhow = "1.0.38"
ed25519-dalek = "1.0.1"
base64 = "0.13.0"
itertools = "0.10.0"

crypto = { path = "../crypto" }
store = { path = "../store" }
consensus = { path = "../consensus" }
mempool = { path = "../mempool" }
gossip = { path = "../gossip" }

[features]
benchmark = ["consensus/benchmark", "mempool/benchmark"]

[[bin]]
name = "myclient"
path = "src/myclient.rs"
required-features = ["benchmark"]

[[bin]]
name = "mytest"
path = "src/mytest.rs"
required-features = ["benchmark"]
